<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/vcr_osd_mono_cyr"
            android:text="@string/app_name"
            android:textSize="80sp"/>
        <TextView
            android:id="@+id/high_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/vcr_osd_mono_cyr"
            android:text="@string/high_score_default"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <Button
                android:id="@+id/new_game"
                android:backgroundTint="@color/V5_color"
                android:layout_width="wrap_content"
                android:fontFamily="@font/vcr_osd_mono_cyr"
                android:layout_height="wrap_content"
                android:text="@string/new_game"/>
            <Button
                android:id="@+id/reset_score"
                android:backgroundTint="@color/W5_color"
                android:fontFamily="@font/vcr_osd_mono_cyr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_score"/>
            <Button
                android:id="@+id/exit_game"
                android:backgroundTint="@color/Y5_color"
                android:fontFamily="@font/vcr_osd_mono_cyr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>